<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/amount" />

            <EditText
                android:id="@+id/amountInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:hint="@string/enter_amount" />

            <TextView
                android:id="@+id/NoOfPax"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Num. of Pax" />

            <EditText
                android:id="@+id/paxInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:hint="Enter num. of Pax" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/SVStoggle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:textOff="@string/no_svs"
                android:textOn="@string/svs"/>

            <ToggleButton
                android:id="@+id/GSTtoggle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:textOff="@string/no_gst"
                android:textOn="@string/gst"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/discount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/discount" />

            <EditText
                android:id="@+id/discountInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:hint="@string/enter_discount_if_any" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <RadioButton
                    android:id="@+id/cash"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cash" />

                <RadioButton
                    android:id="@+id/paynow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/paynow" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/split"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Split" />

            <Button
                android:id="@+id/reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Reset" />

        </LinearLayout>

        <TextView
            android:id="@+id/displayTotalBill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_bill"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/displayIndiBill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/each_pays"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>